// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpressionMatrix Empty matrix generateIndexFor works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
  },
  "lastFreeIndex": 1,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
    ],
    "size": Array [
      0,
      0,
    ],
    "values": Array [],
  },
  "stats": Object {},
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
    ],
    "size": Array [
      0,
      0,
    ],
    "values": Array [],
  },
}
`;

exports[`ExpressionMatrix Empty matrix pushGeneExpression works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
    "Lyz2": 1,
  },
  "lastFreeIndex": 2,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      5,
    ],
  },
  "stats": Object {
    "Gzma": Object {
      "rawMean": 0.3,
      "rawStdev": 0.4,
      "truncatedMax": 1,
      "truncatedMin": 0,
    },
    "Lyz2": Object {
      "rawMean": 2.3,
      "rawStdev": 2,
      "truncatedMax": 3,
      "truncatedMin": 2,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      3,
    ],
  },
}
`;

exports[`ExpressionMatrix Empty matrix setGeneExpression works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
    "Lyz2": 1,
  },
  "lastFreeIndex": 2,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      5,
    ],
  },
  "stats": Object {
    "Gzma": Object {
      "rawMean": 0.3,
      "rawStdev": 0.4,
      "truncatedMax": 1,
      "truncatedMin": 0,
    },
    "Lyz2": Object {
      "rawMean": 2.3,
      "rawStdev": 2,
      "truncatedMax": 3,
      "truncatedMin": 2,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      3,
    ],
  },
}
`;

exports[`ExpressionMatrix Filled matrix generateIndexFor works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
    "Hba-x": 2,
    "Lyz2": 1,
  },
  "lastFreeIndex": 3,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      5,
    ],
  },
  "stats": Object {
    "Gzma": Object {
      "rawMean": 0.3,
      "rawStdev": 0.4,
      "truncatedMax": 1,
      "truncatedMin": 0,
    },
    "Lyz2": Object {
      "rawMean": 2.3,
      "rawStdev": 2,
      "truncatedMax": 3,
      "truncatedMin": 2,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      3,
    ],
  },
}
`;

exports[`ExpressionMatrix Filled matrix pushGeneExpression adds new data keeping previous 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
    "Hba-x": 2,
    "Lyz2": 1,
    "Rbp4": 3,
  },
  "lastFreeIndex": 4,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
      0,
      1,
      2,
      0,
      1,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
      12,
      15,
    ],
    "size": Array [
      3,
      4,
    ],
    "values": Array [
      1,
      2,
      5,
      5,
      8,
      9,
      2,
      9,
      5,
    ],
  },
  "stats": Object {
    "Gzma": Object {
      "rawMean": 0.3,
      "rawStdev": 0.4,
      "truncatedMax": 1,
      "truncatedMin": 0,
    },
    "Hba-x": Object {
      "rawMean": 5,
      "rawStdev": 0.4,
      "truncatedMax": 15,
      "truncatedMin": 10,
    },
    "Lyz2": Object {
      "rawMean": 2.3,
      "rawStdev": 2,
      "truncatedMax": 3,
      "truncatedMin": 2,
    },
    "Rbp4": Object {
      "rawMean": 10,
      "rawStdev": 1.9,
      "truncatedMax": 6,
      "truncatedMin": 0,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
      0,
      1,
      2,
      0,
      1,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
      12,
      15,
    ],
    "size": Array [
      3,
      4,
    ],
    "values": Array [
      1,
      2,
      3,
      1,
      1,
      6,
      2,
      5,
      3,
    ],
  },
}
`;

exports[`ExpressionMatrix Filled matrix setGeneExpression replaces existing data 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Hba-x": 0,
    "Rbp4": 1,
  },
  "lastFreeIndex": 2,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      1,
      2,
      0,
      1,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      3,
      6,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      5,
      8,
      9,
      2,
      9,
      5,
    ],
  },
  "stats": Object {
    "Hba-x": Object {
      "rawMean": 5,
      "rawStdev": 0.4,
      "truncatedMax": 15,
      "truncatedMin": 10,
    },
    "Rbp4": Object {
      "rawMean": 10,
      "rawStdev": 1.9,
      "truncatedMax": 6,
      "truncatedMin": 0,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      1,
      2,
      0,
      1,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      3,
      6,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      1,
      6,
      2,
      5,
      3,
    ],
  },
}
`;
